ansible/files/manifests/ledblink-api/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    app: led-api
  labels:
    app: led-api
  name: led-api
  namespace: cps
spec:
  replicas: 1
  selector:
    matchLabels:
      app: led-api
  strategy: {}
  template:
    metadata:
      annotations:
        app: led-api
      labels:
        app: led-api
    spec:
      containers:
      - image: localhost/ledblink-api:v1
        imagePullPolicy: IfNotPresent
        name: api
        ports:
        - containerPort: 5000
          protocol: TCP
        volumeMounts:
        - mountPath: /dev
          name: dev
        securityContext:
          privileged: true
      restartPolicy: Always
      volumes:
      - name: dev
        hostPath:
          path: /dev
      serviceAccount: led
      serviceAccountName: led
