ansible/files/manifests/ledblink-api/service.yaml
kind: Service
apiVersion: v1
metadata:
  annotations:
    skupper.io/address: led-api-proxy
    skupper.io/port: '5000'
    skupper.io/proxy: tcp
  name: led-api
  namespace: cps
  labels:
    app: led-api
spec:
  type: NodePort
  ports:
    - name: 5000-tcp
      protocol: TCP
      port: 5000
      targetPort: 5000
      nodePort: 32000
  selector:
    app: led-api
